--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "dxc-input": "^0.1.6",
     "dxc-upload": "^1.0.3",
     "fs-alert": "^0.3.0",
-    "qq-share": "^1.0.1",
     "react": "^16.2.0",
     "react-color": "^2.14.1",
     "react-dom": "^16.2.0"
@@ -27,6 +26,6 @@
     "eslint-plugin-react": "^7.1.0",
     "husky": "^0.12.0",
     "redbox-react": "^1.4.3",
-    "roadhog": "^2.0.0"
+    "roadhog": "^2.5.0-beta.4"
   }
 }
